# globetrotter

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  globetrotter_new.db  pyproject.toml  server.py
backend/data/: data.json
backend/src/: main.py
backend/src/api/: __init__.py  game.py  group.py
backend/src/core/: config.py  database.py  logger.py  websocket.py
backend/src/models/: destination.py  group.py  user.py
backend/src/schemas/: destination.py  group.py  user.py
backend/src/scripts/: list_cities.py  load_cities.py  recreate_db.py
backend/src/services/: game_service.py  group_service.py  quiz.py  user_service.py
docs/: ARCHITECTURE.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
frontend/src/app/: globals.css  layout.tsx  metadata.ts  page.tsx
frontend/src/components/: achievement-badge.tsx  game.tsx  share-dialog.tsx  username-form.tsx
frontend/src/components/ui/: footer.tsx  header.tsx
frontend/src/hooks/: use-game-queries.ts
frontend/src/lib/: api.ts  constants.ts  types.ts  username-generator.ts
nginx/conf.d/: default.conf
