[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[all,standard]>=0.115.11",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "python-jose[cryptography]>=3.4.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.38",
    "websockets>=15.0",
]

[project.scripts]
dev = "uvicorn src.main:app --reload"
prod = "uvicorn src.main:app"
hello = "echo 'Hello, World!'"
